# blink

./: .blinkignore  .dockerignore  .editorconfig  .gitignore  .nvim-dap.lua  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  format.py  rustfmt.toml
.fleet/: run.json
benchmark/: test1.dart  testrun.dart
blink/: Cargo.toml
blink/src/: config.rs  formatter.rs  main.rs
results/: test1.dart  test2.dart  test3.dart
results/dir/: subtest1.dart
results/dir/dir2/: subtest2.dart
samples/: test1.dart  test2.dart  test3.dart  test_ignore.dart  test_ignore.g.dart
samples/dir/dir2/: subtest2.dart
src/: config.rs  formatter.rs  ignores.rs  main.rs  treesitter.rs
